# EDLib

./: .gitignore  .travis.yml  .zenodo.json  CMakeLists.txt  CNAME  LICENSE  README.md  _config.yml  main.cpp
TEST/: generate_input.py  hubbard.param  input.h5  sim.h5
cmake/: CXXStandard.cmake  EnableGtests.cmake  FindARPACK.cmake
examples/: Anderson.cpp  CMakeLists.txt  HolsteinAnderson.cpp  Hubbard.cpp  Symmetry.cpp
include/: edlib.h
include/edlib/: CMakeLists.txt  CRSMatrix.h  CRSStorage.h  ChiLoc.h  Combination.h  CommonUtils.h  DensityMatrix.h  EDParams.h  EigenPair.h  ExecutionStatistic.h  FermionicModel.h  GreensFunction.h  HDF5Utils.h  Hamiltonian.h  HolsteinAndersonModel.h  HubbardModel.h  Lanczos.h  MeshFactory.h  NSymmetry.h  NSymmetryWithBoson.h  SOCRSStorage.h  SingleImpurityAndersonModel.h  SpinResolvedStorage.h  StateDescription.h  StaticObervables.h  StaticObservables.h  Storage.h  Symmetry.h  SzSymmetry.h  fortranbinding.h
include/edlib-ext/: DensityMatrix.h
include/ext/: CMakeLists.txt  DensityMatrix.h  FermiBosonStorage.h  HolsteinAndersonModel.h  HolsteinAndersonParameter.h  NSymmetryWithBoson.h  SzSymmetryWithBoson.h
input/: hubbard.param  input.h5
input-4x4/: generate_input.py  hubbard.param
input/anderson/: anderson.param  input.h5
input/anderson_Kanamori/: anderson.param  bath.txt  generate_anderson_model_input.py  run.sh  t.txt  v.txt
input/cobalt-adatom/: anderson.param  generate_cobalt_adatom_input.py  generate_input.py  input.h5
input/holstein/: holstein.param  input.h5
input/hubbard/: hubbard.param  input.h5
input/hubbard-16site/: generate_16site_plaquette_input.py  hubbard.param  input.h5
lib/: CMakeLists.txt  CRSStorage.cpp  CRSStorage.h  EDParams.h  SOCRSStorage.h  SpinResolvedStorage.h  Storage.cpp  Storage.h  darnoldi.f90  dummy.f90  fortranbinding.h
parpack/: CMakeLists.txt  pdnorm2.f  pdsaitr.f  pdsapps.f  pdsaup2.f  pssaitr.f  pssapps.f
scripts/: generate_anderson_model_input.py  generate_holstein_anderson_model_input.py  generate_hubbard_model_input.py  generate_input.py
src/: CMakeLists.txt  Combination.cpp  Combination.h  EDParams.h  EigenPair.h  FermionicModel.h  GreensFunction.h  Hamiltonian.cpp  Hamiltonian.h  HolsteinAndersonModel.h  HubbardModel.h  Lanczos.h  NSymmetry.h  NSymmetryWithBoson.h  Sector.cpp  Sector.h  Simmetry.cpp  Simmetry.h  SingleImpurityAndersonModel.h  Symmetry.cpp  Symmetry.h  SzCombination.cpp  SzCombination.h  SzSimmetry.cpp  SzSimmetry.h  SzSymmetry.cpp  SzSymmetry.h
test/: CMakeLists.txt  DensityMatrix_Test.cpp  HolsteinAndersonModel_Test.cpp  HubbardModel_Test.cpp  Lanczos_Test.cpp  NSymmetryWithBoson_Test.cpp  NSymmetry_Test.cpp  SRS.cpp  SpinResolvedStorage_Test.cpp  StaticObservables_Test.cpp  Statistics_Test.cpp  SzSymmetryWithBoson_Test.cpp  SzSymmetry_Test.cpp
test/input/4ring/: generate_input.py  input.h5
test/input/4ring_nomagfield/: generate_input.py  input.h5
test/input/GF_Chi/: generate_input.py  input.h5
test/input/dimer/: generate_input.py  input.h5
